--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
     <div class="footer__items">
       <div class="footer__item">
         <h4>Pages</h4>
-        <p>Start</p>
-        <p>Contact</p>
-        <p>Our history</p>
-        <p>Licenses</p>
-        <p>Instructions</p>
-        <p>Style guide</p>
+        <a href="index.html">Start</a>
+        <a href="#">Contact</a>
+        <a href="#">Our history</a>
+        <a href="#">Licenses</a>
+        <a href="#">Instructions</a>
+        <a href="google.com">Style Guide</a>
       </div>
       <div class="footer__item">
         <h4>Social Media</h4>
